--- a/views/index.html
+++ b/views/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <style type="text/css">
-        #app, .content-layout {
+        #app, body {
             height: 100vh;
         }
     </style>
