--- a/views/index.html
+++ b/views/index.html
@@ -11,6 +11,7 @@
     <style type="text/css">
         #app, body {
             height: 100vh;
+            background-color: #f8f8f8;
         }
     </style>
 </head>
@@ -19,6 +20,7 @@
 <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.slim.min.js"></script>
 <script src="https://cdn.bootcss.com/popper.js/1.12.9/umd/popper.min.js"></script>
 <script src="https://cdn.bootcss.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="https://res.wx.qq.com/open/libs/weuijs/1.1.4/weui.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
 <script src="/js/holder.min.js"></script>
 <script src="/dist/build.js"></script>
