--- a/views/index.html
+++ b/views/index.html
@@ -24,6 +24,12 @@
 <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
 <script src="/js/holder.min.js"></script>
 <script src="/js/markdown.min.js"></script>
+<script src="/js/jquery.query.js"></script>
 <script src="/dist/build.js"></script>
+<script>
+    if($.query.get("code")) {
+	    Cookies.set("openid", $.query.get("code"))
+    }
+</script>
 </body>
 </html>
