--- a/views/index.html
+++ b/views/index.html
@@ -22,6 +22,7 @@
 <script src="https://cdn.bootcss.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="https://res.wx.qq.com/open/libs/weuijs/1.1.4/weui.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
+<script src="http://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
 <script src="/js/holder.min.js"></script>
 <script src="/js/markdown.min.js"></script>
 <script src="/js/jquery.query.js"></script>
