--- a/views/index.html
+++ b/views/index.html
@@ -23,6 +23,7 @@
 <script type="text/javascript" src="https://res.wx.qq.com/open/libs/weuijs/1.1.4/weui.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
 <script src="http://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
+<script src="https://unpkg.com/qiniu-js@latest/dist/qiniu.min.js"></script>
 <script src="/js/holder.min.js"></script>
 <script src="/js/markdown.min.js"></script>
 <script src="/js/jquery.query.js"></script>
